[gd_scene format=3 uid="uid://fix3rwufx5qv"]

[ext_resource type="Script" uid="uid://sjnwhxik4yas" path="res://src/villager.gd" id="1_t12mu"]
[ext_resource type="PackedScene" uid="uid://cldxrxi6cj4ln" path="res://scenes/components/HealthComponent.tscn" id="2_vrepr"]
[ext_resource type="Shader" uid="uid://d21b4b7xrre2h" path="res://shaders/unit.gdshader" id="4_aqvaj"]
[ext_resource type="TileSet" uid="uid://cgig36v2tr1w3" path="res://resources/urizen.tres" id="4_eg14d"]
[ext_resource type="PackedScene" uid="uid://e2608e4n3uw5" path="res://scenes/components/UnitController.tscn" id="4_q8lqd"]
[ext_resource type="PackedScene" uid="uid://gngxsuir4syw" path="res://scenes/components/SoundComponent.tscn" id="6_aqvaj"]
[ext_resource type="PackedScene" uid="uid://dv0isi7bv1viu" path="res://scenes/components/FactionLabelComponent.tscn" id="7_iy4rk"]
[ext_resource type="PackedScene" uid="uid://dn6gry3n4rvt8" path="res://scenes/components/WanderComponent.tscn" id="8_ojcu5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vrepr"]
radius = 5.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iy4rk"]
resource_local_to_scene = true
shader = ExtResource("4_aqvaj")
shader_parameter/random_phase = 0.0
shader_parameter/speed = 5.0
shader_parameter/height = 0.0
shader_parameter/squash_amount = 0.024
shader_parameter/sprite_height = 12.0
shader_parameter/black_sensitivity = 0.1
shader_parameter/edge_distance = 0.055
shader_parameter/use_active_state = false
shader_parameter/default_border_color = Color(0, 0, 0, 1)
shader_parameter/active_border_color = Color(1, 0, 0, 1)
shader_parameter/default_border_width = 0.5
shader_parameter/active_border_width = 0.25
shader_parameter/glow_intensity = 2.0000000475

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_aqvaj"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sprite:scale")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:lore_data")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:random_atlas_coords")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:spawning_player_id")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("Sprite:position")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:autonomous_mode")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath(".:faction")
properties/7/spawn = true
properties/7/replication_mode = 2

[node name="Villager" type="CharacterBody2D" unique_id=1841291669 groups=["units", "villagers"]]
collision_layer = 2
collision_mask = 15
input_pickable = true
motion_mode = 1
script = ExtResource("1_t12mu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1227123667]
position = Vector2(0, 9.536743e-07)
shape = SubResource("CircleShape2D_vrepr")

[node name="UnitController" parent="." unique_id=853692782 instance=ExtResource("4_q8lqd")]
position = Vector2(-6, -5.999999)

[node name="SelectionCircle" type="Sprite2D" parent="." unique_id=1204965436]
position = Vector2(-6, -5.999999)

[node name="ColorRect" type="ColorRect" parent="SelectionCircle" unique_id=1451600947]
z_index = -1
offset_right = 12.0
offset_bottom = 12.0
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="TileMapLayer" parent="." unique_id=694133325]
material = SubResource("ShaderMaterial_iy4rk")
position = Vector2(-6, -6)
tile_set = ExtResource("4_eg14d")

[node name="HealthComponent" parent="." unique_id=2141843244 instance=ExtResource("2_vrepr")]
position = Vector2(0, -9)
scale = Vector2(0.05, 0.04)

[node name="SoundComponent" parent="." unique_id=1853832311 instance=ExtResource("6_aqvaj")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." unique_id=1733228535]
replication_config = SubResource("SceneReplicationConfig_aqvaj")

[node name="FactionLabelComponent" parent="." unique_id=719053713 instance=ExtResource("7_iy4rk")]
position = Vector2(0, 8)
scale = Vector2(0.25, 0.25)

[node name="WanderComponent" parent="." unique_id=1934634523 instance=ExtResource("8_ojcu5")]
current_stance = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
